# snowflake-emulator

./: .dockerignore  .gitignore  .tagpr  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: dbt-integration.yml  docker.yml  go-integration.yml  playground.yml  release.yml  rust.yml  tagpr.yml
cli/: Cargo.toml
cli/src/: main.rs
engine/: Cargo.toml
engine/src/: catalog.rs  error.rs  executor.rs  lib.rs  protocol.rs  session.rs  sql_rewriter.rs
engine/src/functions/: aggregate.rs  array.rs  conditional.rs  context.rs  datetime.rs  flatten.rs  hash.rs  helpers.rs  json.rs  mod.rs  numeric.rs  object.rs  string.rs  test_utils.rs  try_functions.rs  type_check.rs  window.rs
go/: go.mod  go.sum  integration_test.go  main.go
integration/dbt/: dbt_project.yml  profiles.yml  run_test.sh
integration/dbt/models/: aggregation_model.sql  source_table.sql  table_model.sql  view_model.sql
playground/: .eslintrc.json  App.jsx  App.tsx  Cargo.toml  Makefile  bun.lockb  index.jsx  index.tsx  package.json  tsconfig.json
playground/.husky/: pre-commit
playground/public/: index.html
playground/src/: lib.rs
server/: Cargo.toml
server/src/: auth.rs  error.rs  expr.rs  handlers.rs  lib.rs  main.rs  parser.rs  plan.rs  processor.rs  query_request.rs  server.rs  state.rs  value.rs
server/src/parser/: mod.rs
server/tests/: integration_test.rs
sf/: Cargo.toml
sf/src/: error.rs  expr.rs  lib.rs  parser.rs  plan.rs  processor.rs  value.rs
src/parser/: mod.rs
