[package]
name = "snowflake-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.22.0"

[lib]
name = "sfemulator"
path = "src/lib.rs"

[[bin]]
name = "sfemulator"
path = "src/cli/main.rs"
