[workspace]
members = ["server", "cli", "engine"]
default-members = ["cli"]
resolver = "2"

[workspace.dependencies]
datafusion = "52"
sqlparser = { version = "0.59", features = ["visitor"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
