[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Snowflake emulator core engine powered by DataFusion"

[dependencies]
datafusion.workspace = true
sqlparser.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true

arrow = { version = "54", default-features = false }
async-trait = "0.1"
parking_lot = "0.12"
chrono = "0.4"
regex = "1"
