[package]
name = "engine"
version = "0.2.0"
edition = "2021"
description = "Snowflake emulator core engine powered by DataFusion"

[dependencies]
datafusion.workspace = true
sqlparser.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true

async-trait = "0.1"
parking_lot = "0.12"
chrono = "0.4"
regex = "1"
sha1 = "0.11"
sha2 = "0.11"
hex = "0.4"
rquickjs = { version = "0.11", features = ["bindgen", "parallel"], optional = true }

[features]
default = ["js-udf"]
js-udf = ["rquickjs"]
