[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
sf = {path = "../sf"}

[lib]
crate-type = ["cdylib"]

