[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Snowflake emulator HTTP server"

[dependencies]
engine = { path = "../engine" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
