[package]
name = "server"
version = "0.1.1"
edition = "2021"
description = "Snowflake emulator HTTP server"

[dependencies]
engine = { path = "../engine" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
parking_lot = "0.12"
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
